fixed z-index.

--- a/css/hyde.css
+++ b/css/hyde.css
@@ -67,6 +67,7 @@ html {
   padding: 0rem 0em;
   color: rgba(255,255,255,.5);
   background-color: rgba(255, 255, 255, 0);
+  z-index:1;
 }
 @media (min-width: 48em) {
   .sidebar {
